objects/niq__Insights_nCino_Script_Template__c.object
<CustomObject>
    <description>Stores nCino Script templates created with Insights mapping configuration.</description>
    <fields>
        <fullName>niq__Context_Object_Type__c</fullName>
        <description>The system automatically populates this required text field with the context object that the user selected during Insights mapping configuration. By default, the value is blank.</description>
        <label>Context Object Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Model__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The system automatically populates this required lookup field with the template’s associated model. By default, the value is blank.</description>
        <label>Model</label>
        <referenceTo>niq__Model__c</referenceTo>
        <relationshipLabel>nCino Script Templates</relationshipLabel>
        <relationshipName>Insights_nCino_Script_Template_To_Model</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>niq__lookupKey__c</fullName>
        <description>The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>niq__nCino_Script_Template__c</fullName>
        <description>The system automatically populates this optional text field with the JSON text of the saved template. By default, the value is blank.</description>
        <label>nCino Script Template</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Insights nCino Script Template</label>
    <nameField>
        <displayFormat>T-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insights nCino Script Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>